tests/ui/derive/fail_foundry_id_duplicate_values.rs
use foundry::FoundryId;

#[derive(FoundryId)]
#[foundry(id = foundry::GuardId)]
enum Guard {
    #[foundry(value = "api")]
    Api,
    #[foundry(value = "api")]
    Admin,
}

fn main() {}
